@@ -862,10 +862,11 @@ BOOLEAN PhGetNetworkConnections(
         return FALSE;
 
     // TCP IPv4
+
     tableSize = 0;
     GetExtendedTcpTable_I(NULL, &tableSize, FALSE, AF_INET, TCP_TABLE_OWNER_MODULE_ALL, 0);
-
     table = PhAllocate(tableSize);
+
     if (GetExtendedTcpTable_I(table, &tableSize, FALSE, AF_INET, TCP_TABLE_OWNER_MODULE_ALL, 0) == 0)
     {
         tcp4Table = table;
@@ -878,10 +879,25 @@ BOOLEAN PhGetNetworkConnections(
     }
 
     // TCP IPv6
+
     tableSize = 0;
     GetExtendedTcpTable_I(NULL, &tableSize, FALSE, AF_INET6, TCP_TABLE_OWNER_MODULE_ALL, 0);
 
+    // Note: On Windows XP, GetExtendedTcpTable had a bug where it calculated the required buffer size 
+    // for IPv6 TCP_TABLE_OWNER_MODULE_ALL requests incorrectly, causing it to return the wrong size 
+    // and overrun the provided buffer instead of returning an error. The size should be:
+    // = FIELD_OFFSET(MIB_TCP6TABLE_OWNER_MODULE, table) + sizeof(MIB_TCP6ROW_OWNER_MODULE) * (number of entries)
+    // However, the function calculated it as:
+    // = FIELD_OFFSET(MIB_TCP6TABLE_OWNER_MODULE, table) + sizeof(MIB_TCP6ROW_OWNER_PID) * (number of entries)
+    // A workaround is implemented below.
+    if (WindowsVersion <= WINDOWS_XP)
+    {
+        tableSize = FIELD_OFFSET(MIB_TCP6TABLE_OWNER_MODULE, table) +
+            (tableSize - FIELD_OFFSET(MIB_TCP6TABLE_OWNER_MODULE, table)) / sizeof(MIB_TCP6ROW_OWNER_PID) * sizeof(MIB_TCP6ROW_OWNER_MODULE);
+    }
+
     table = PhAllocate(tableSize);
+
     if (GetExtendedTcpTable_I(table, &tableSize, FALSE, AF_INET6, TCP_TABLE_OWNER_MODULE_ALL, 0) == 0)
     {
         tcp6Table = table;
@@ -894,10 +910,11 @@ BOOLEAN PhGetNetworkConnections(
     }
 
     // UDP IPv4
+
     tableSize = 0;
     GetExtendedUdpTable_I(NULL, &tableSize, FALSE, AF_INET, UDP_TABLE_OWNER_MODULE, 0);
-
     table = PhAllocate(tableSize);
+
     if (GetExtendedUdpTable_I(table, &tableSize, FALSE, AF_INET, UDP_TABLE_OWNER_MODULE, 0) == 0)
     {
         udp4Table = table;
@@ -910,10 +927,11 @@ BOOLEAN PhGetNetworkConnections(
     }
 
     // UDP IPv6
+
     tableSize = 0;
     GetExtendedUdpTable_I(NULL, &tableSize, FALSE, AF_INET6, UDP_TABLE_OWNER_MODULE, 0);
-
     table = PhAllocate(tableSize);
+
     if (GetExtendedUdpTable_I(table, &tableSize, FALSE, AF_INET6, UDP_TABLE_OWNER_MODULE, 0) == 0)
     {
         udp6Table = table;
@@ -952,6 +970,7 @@ BOOLEAN PhGetNetworkConnections(
 
             index++;
         }
+
         PhFree(tcp4Table);
     }
 
@@ -979,6 +998,7 @@ BOOLEAN PhGetNetworkConnections(
 
             index++;
         }
+
         PhFree(tcp6Table);
     }
 
@@ -1004,6 +1024,7 @@ BOOLEAN PhGetNetworkConnections(
 
             index++;
         }
+
         PhFree(udp4Table);
     }
 
@@ -1029,6 +1050,7 @@ BOOLEAN PhGetNetworkConnections(
 
             index++;
         }
+
         PhFree(udp6Table);
     }
 
